fix:Alternative texts are added and images that will not be used are removed

--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
   <body>
     <div class="grid-container">
       <header>
-        <img src="assets/img/ticketmania.png" alt="" />
+        <img
+          src="assets/img/ticketmania.png"
+          alt="Logo Ticketmania, el cual es la palabra de letras rojas, sobras en su parte inferior de color rojo y fondo negro"
+        />
       </header>
       <main>
         <button class="container_ticket main_button">
-          <img class="main_image" src="assets/img/ticket.png" alt="" />
+          <img
+            class="main_image"
+            src="assets/img/ticket.png"
+            alt="Imagen con 3 logos, los cuales se distribuyen de izquierda a derecha de la siguiente forma: 1) Bonjovi el cual es un corazón con una espada atravesada des arriba hasta abajo y en su parte inferior la palabra Bonjovi. 2) Metallica el cual es la palabra Metallica de color negro y de fondo una tormenta de rayos de color azul y  Guns Roses el cual es un circulo de color amarillo el cual en su parte superior se encuentra la palabra Gunsn y en la parte inferior Roses, también en su interior se encuentran dos pistolas estilo vaqueros y dos rosas de color rojo."
+          />
         </button>
         <div class="amount amount_1">
           <input value="0" class="input_amount_1" type="number" />
