--- a/index.html
+++ b/index.html
@@ -31,19 +31,81 @@
           />
         </button>
         <div class="amount amount_1">
-          <input value="0" class="input_amount_1" type="number" />
+          <input
+            value="0"
+            min="0"
+            max="10"
+            class="input_amount_1"
+            type="number"
+          />
         </div>
         <div class="amount amount_2">
-          <input value="0" class="input_amount_2" type="number" />
+          <input
+            value="0"
+            min="0"
+            max="10"
+            class="input_amount_2"
+            type="number"
+          />
         </div>
         <div class="amount amount_3">
-          <input value="0" class="input_amount_3" type="number" />
+          <input
+            value="0"
+            min="0"
+            max="10"
+            class="input_amount_3"
+            type="number"
+          />
         </div>
         <div class="info_container">
-          <h3 class="info"></h3>
+          <p class="info"></p>
         </div>
         <div class="button_calc_container">
           <button class="button_calc">Verificar</button>
+        </div>
+        <p class="title_password">Ingrese su contraseña</p>
+        <div class="select_num_container">
+          <select class="in hundred">
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+          </select>
+
+          <select class="in ten">
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+          </select>
+
+          <select class="in unit">
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+          </select>
+        </div>
+        <div class="button_password_container">
+          <button class="button_password">Ingresar</button>
         </div>
       </main>
     </div>
