--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </button>
         <div class="amount amount_1">
           <input
-            value="0"
+            placeholder="Numeros del 0 al 10"
             min="0"
             max="10"
             class="input_amount_1"
@@ -41,7 +41,7 @@
         </div>
         <div class="amount amount_2">
           <input
-            value="0"
+            placeholder="Numeros del 0 al 10"
             min="0"
             max="10"
             class="input_amount_2"
@@ -50,7 +50,7 @@
         </div>
         <div class="amount amount_3">
           <input
-            value="0"
+            placeholder="Numeros del 0 al 10"
             min="0"
             max="10"
             class="input_amount_3"
