feat:A validator will be created for the entry of tickets in part 2 of the challenge (There was a validator in html, which was eliminated to be able to enter string values ​​and thus the validator in JS could do the validation according to what was requested by the teacher The way of manipulating the border in part 1 of the challenge is also modified (SetAttribute and removeProperty are used).

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             min="0"
             max="10"
             class="input_amount_1"
-            type="number"
+            type="text"
           />
         </div>
         <div class="amount amount_2">
@@ -45,7 +45,7 @@
             min="0"
             max="10"
             class="input_amount_2"
-            type="number"
+            type="text"
           />
         </div>
         <div class="amount amount_3">
@@ -54,7 +54,7 @@
             min="0"
             max="10"
             class="input_amount_3"
-            type="number"
+            type="text"
           />
         </div>
         <div class="info_container">
